# oni-mod-tools

./: CONTRIBUTING  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
oni-mods-admin/: .gitignore  .prettierignore  package.json  pnpm-lock.yaml
oni-mods-admin/src/: App.vue  main.ts  router.ts
oni-mods-admin/src-tauri/: .gitignore  Cargo.toml  config.json  tauri.conf.json
oni-mods-admin/src-tauri/src/: io.rs  main.rs
oni-mods-admin/src-tauri/src/functions/: git.rs  info.rs  mod.rs  project.rs
oni-mods-admin/src/components/: CreateCsProject.vue  CreateSolution.vue  GitRepo.vue  VerticalMenu.vue
oni-mods-admin/src/store/: project.store.ts
oni-mods-admin/src/style/: atom.css
oni-mods-admin/src/uitls/: invokes.ts  (+1 more)
src/: App.vue  main.ts  router.ts
src-tauri/: .gitignore  Cargo.toml  config.json  solutions.json  tauri.conf.json
src-tauri/resources/: Mod.cs
src-tauri/src/: io.rs  main.rs
src/store/: misc.store.ts  project.store.ts
src/style/: atom.css
src/uitls/: invokes.ts
src/view/: CreateSolution.vue  Main.vue  Solutions.vue  Solutioons.vue
start-doc/: .gitignore  index.md  package.json  pnpm-lock.yaml
start-doc/.vitepress/: config.ts  sidebarConfig.ts
start-doc/0/: 0_1_target.md  0_2_guideline.md  0_3_preface_ttdly.md
start-doc/1/: 1_1_visual_studio.md  1_2_c_sharp.md  1_2_c_sharp.md.discard  1_3_harmony_2_0.md  1_4_dot_peek.md  1_5_animation_tools.md
start-doc/2/: 2_1_rela_files.md  2_2_proj_create.md  2_3_budle.md
start-doc/3/: 3_1_new_building.md  3_2_modify_buildings.md  3_3_modify_detail_menu.md  3_4_mod_il8n.md
(+14 files in other folders)
