[package]
name = "oni-mods-admin"
version = "0.0.0"
description = "A Tauri App"
authors = ["ttdly"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"
serde-xml-rs = "0.6.0"
xml-rs = "0.8.13"
anyhow = "1.0.71"
uuid = "1.3.3"
reqwest = {version = "0.11.22", features = ["json", "blocking"] }
scraper = "0.12"
walkdir = "2.3.3"
git2 = "0.18.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
